message BondInfo {
	/**
	 * 证券代码
	 */
    string secuCode = 1;
	/**
	 * 证券代码
	 */
    string bondMHCode = 2;
	/**
	 * 证券名称
	 */
    string secuName = 3;
	/**
	 * 证券类型
	 */
    string secuType = 4;
	/**
	 * 分类1
	 */
    string class1 = 5;
	/**
	 * 分类2
	 */
    string class2 = 6;
	/**
	 * 分类3
	 */
    string class3 = 7;
	/**
	 * 分类4
	 */
    string class4 = 8;
	/**
	 * 市場
	 */
    string market = 9;
	/**
	 * 票面年利率
	 */
    double parIr = 10;
	/**
	 * 债券面值
	 */
    double parValue = 11;
	/**
	 * 发行价格
	 */
    double issuePrice = 12;
	/**
	 * 发行规模
	 */
    double issueAmt = 13;
	/**
	 * 发行人
	 */
    string issuer = 14;
	/**
	 * 承销人
	 */
    repeated string underwriter = 15;
	/**
	 * 担保人
	 */
    repeated string guarantee = 16;
	/**
	 * ABS原始权益人
	 */
    string beneficiary = 17;
	/**
	 * ABS原始权益人(多个)
	 */
    repeated string beneficiaries = 18;
	/**
	 * 是否公开发行
	 */
    bool isPublicIssued = 19;
	/**
	 * IA TYPE
	 */
    string IAType = 20;
	/**
	 * 聚源Maincode
	 */
    int64 jyMainCode = 21;
	/**
	 * 聚源innercode
	 */
    string jyInnerCode = 22;
	/**
	 * 债券公司整体持仓上线
	 */
    double upRatio = 23;
	// 评级信息
	/**
	 * 最近五年债券所有外部评级<评级机构，具体评级>
	 */
    map<string, ExternalBondRatings> externalBondRatingAll = 24;
	/**
	 * 最近五年债券所有内部评级
	 */
    repeated InternalBondRating internalBondRatingAll = 25;
	/**
	 * 最近五年债券所有内部评级(新体系)
	 */
    repeated NewInternalBondRating newInternalBondRatingAll = 26;
	/**
	 * 最近五年债券所有外部评级展望<评级机构，具体评级>
	 */
    map<string, ExternalBondRatingOutlooks> externalBondRatingOutlookAll = 27;
	/**
	 * 最近五年债券所有内部评级展望
	 */
    repeated InternalBondRatingOutlook internalBondRatingOutlookAll = 28;
//	/**
//	 * 外部默认债项评级的机构
//	 *
//	 */
//	private String externalRatingParty;
//	/**
//	 * 外部默认债项评级
//	 *
//	 */
//	private String externalRating;
//	/**
//	 * 内部默认债项评级
//	 *
//	 */
//	private String internalRating;
//	/**
//	 * 外部债项展望
//	 * 
//	 */
//	private String externalRatingOutlook;
//	/**
//	 * 内部债项展望
//	 * 
//	 */
//	private String internalRatingOutlook;
	/**
	 * 中金债项评级
	 * 
	 */
    string CIICRating = 29;
	/**
	 * 中债登估值净价
	 */
    double ChinaBondCleanPrice = 30;
	/**
	 * 中债登估值全价
	 */
    double ChinaBondFullPrice = 31;
	/**
	 * 中债登估价收益率
	 */
    double ChinaBondYield = 32;
	/**
	 * 中债登推荐久期
	 */
    double ChinaBondDuration = 33;
	/**
	 * 中证登估价净价
	 */
    double CSDCNetPrice = 34;
	/**
	 * 中证登估价全价
	 */
    double CSDCFullPrice = 35;
	/**
	 * 中证登估价收益率
	 */
    double CSDCYield = 36;
	/**
	 * 中证登估价修正久期
	 */
    double CSDCDuration = 37;
	/**
	 * 起息日
	 */
    int64 valueDate = 38;
	/**
	 * 到期日
	 */
    int64 dueDate = 39;
	/**
	 * 付息频率
	 */
    string payinterestFreq = 40;
	/**
	 * 息票类型
	 */
    string interestPmtType = 41;
	/**
	 * 利率类型
	 */
    string interestType = 42;
	/**
	 * 债券期限(天)
	 */
    int32 term = 43;
	/**
	 * 最近行权日
	 */
    int64 latestEDay = 44;
	/**
	 * 下一个付息日
	 */
    int64 nextCouponDate = 45;
	/**
	 * 债券现金流
	 */
    map<int64, BondCashFlow cashFlow = 46;
	/**
	 * 是否含权
	 */
    bool isRightInvolved = 47;
	/**
	 * 选择权类型
	 */
    repeated string optionTypes = 48;
	/**
	 * 是否城投债
	 */
    bool isCityBond = 49;
	/**
	 * 是否ABS优先级
	 */
    bool isABSSup = 50;
	/**
	 * ABS级别
	 */
    string ABSLevel = 51;
	/**
	 * 是否永续债
	 */
    bool isPerpetualBond = 52;
	/**
	 * 是否短融券
	 */
    bool isShortTermBond = 53;
	/**
	 * 是否最后一个利率调整期
	 */
    bool isLastTerm = 54;
	/**
	 * 浮息债的基准利率类型
	 */
    string baseIRType = 55;
	/**
	 * 证券编码（symbol+market）
	 */
    string combSymbol = 56;
	/**
	 * 债项投资推荐评级表 IA_RATING_BOND_INVEST_RCMD
	 * 不能新增买入
	 */
    bool isIANotInvest = 57;
	/**
	 * 清算场所<>001=1=中债登&002=2=上清所&003=3=中债登上海分公司&004=4=中债登深圳分公司
	 */
    string settingHcode = 58;
	/**
	 * 上市日期
	 */
    int64 listDate = 59;
	/**
	 * 本金偿还方式
	 */
    string redemMethod = 60;
	//上清所
    public static final string SETTING_HCODE_SH = "SH" = 61;
	//中债登
    public static final string SETTING_HCODE_IB = "IB" = 62;
}
